--- a/EnjoyEat/EnjoyEat/Views/Reservations/success.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/Reservations/success.cshtml
@@ -24,11 +24,11 @@
                 <div id="bookedInfornations">
                     <div>
                         <label id="bookDate">訂位日期:</label>
-                        <span>{{reserveInfo[0].reservationDate}}</span>
+                        <span>{{formatDate()}}</span>
                     </div>
                     <div>
                         <label id="bookPeriod">訂位時段:</label>
-                        <span>{{reserveInfo[0].reservationTime}}</span>
+                        <span>{{this.reserveInfo[0].reservationTime}}</span>
                     </div>
                     <div>
                         <label id="bookNumber">用餐人數:</label>
@@ -71,7 +71,12 @@
                 reserveId: 0,
             },
             methods: {
-
+                //日期呈現
+                formatDate: function () {
+                    let date = new Date(this.reserveInfo[0].reservationDate);
+                    this.reserveInfo[0].reservationDate = date.getFullYear() + '-' + (date.getMonth() + 1).toString().padStart(2, '0') + '-' + date.getDate().toString().padStart(2, '0')
+                    return this.reserveInfo[0].reservationDate;
+                },
             },
             mounted:
                 function () {
