--- a/EnjoyEat/EnjoyEat/Views/Shared/_Layout.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/Shared/_Layout.cshtml
@@ -56,7 +56,7 @@
                     <li><a class="nav-link scrollto" asp-controller="ContactUs" asp-action="ContactUs">聯絡我們</a></li>
                     @if (User.Identity.IsAuthenticated)
                     {
-                        <li><a class="nav-link scrollto" asp-controller="MemberManagement" asp-action="Index">@User.Claims.FirstOrDefault(x=> x.Type == ClaimTypes.Name)?.Value 您好</a></li>
+                        <li><a class="nav-link scrollto" asp-controller="MemberManagement" asp-action="Index">會員管理</a></li>
                         <li><a class="nav-link scrollto" asp-controller="MemberLogin" asp-action="Logout">會員登出</a></li>                       
                     }
                     else
