--- a/EnjoyEat/EnjoyEat/Views/OrderHere/Order.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/OrderHere/Order.cshtml
@@ -253,7 +253,7 @@
         var app = new Vue({
             el: '#app',
             data: {
-                memberId:"",
+                memberId:'',
                 products: [],
                 cart: [],
                 cartId: '',
@@ -299,27 +299,10 @@
                     if (cartItem) {
                         this.$set(cartItem, 'quantity', cartItem.quantity + 1);
                     } else {
-                        this.cart.push({
-                            ...product,
-                            quantity: 1,
-                            memberId: this.memberId,
-                            unitPrice: product.unitPrice,
-                            cartId: this.cartId,
-                            productName: product.productName
-                        });
+                        this.cart.push({ ...product, quantity: 1 });
                     }
                     this.total += product.unitPrice;
-                    this.updateCartTotal();
-                    axios.post('/api/Order/AddToCart', {
-                        MemberId: this.memberId,
-                        ProductId: product.productId,
-                        ProductName: product.productName,
-                        Quantity: 1,
-                        UnitPrice: product.unitPrice
-                        })
-                        .then(response => {
-                            console.log(response.data);
-                        })
+                    axios.post('/api/Menu/AddToCart', { memberId: this.memberId, productId: product.productId, quantity: 1 })
                         .catch(err => console.error(err));
                 },
                 //從購物車移除
@@ -331,14 +314,9 @@
                             this.cart = this.cart.filter(item => item.productId !== product.productId);
                         }
                         this.total -= product.unitPrice;
-                        this.updateCartTotal();
-                        axios.post('/api/Order/RemoveFromCart', { memberId: this.memberId, productId: product.productId, quantity: 1 })
+                        axios.post('/api/Menu/RemoveFromCart', { memberId: this.memberId, productId: product.productId, quantity: 1 })
                             .catch(err => console.error(err));
                     }
-                },
-                //更新購物車金額
-                updateCartTotal() {
-                    this.total = this.cart.reduce((sum, item) => sum + item.quantity * item.unitPrice, 0);
                 },
                 //取得餐點數量
                 getQuantity(product) {
@@ -372,7 +350,7 @@
                         alert('您的購物車是空的，請先添加商品。');
                         return;
                     }
-                    axios.post('/api/Order/CreateOrder', this.cart).then(response => {
+                    axios.post('/api/CreateOrder', this.cart).then(response => {
                         alert('訂單已送出');
                         this.cart = [];
                         this.total = 0;
@@ -392,10 +370,10 @@
                         }
                     }
                 },
-                //監聽購物車內容的變化，並將變化後的內容傳送至前端
+                //監聽購物車內容的變化，並將變化後的內容傳送至後端
                 cart: {
                     handler: function (after, before) {
-                        axios.post('/api/Order/UpdateCart', { cartViewModel: after })
+                        axios.post('/api/Menu/UpdateCart', { cartViewModel: after })
                             .then(response => {
                                 console.log(response);
                             })
@@ -408,28 +386,23 @@
 
             },
             created: function () {
-                axios.get('/api/Order/GetMemberId')
-                    .then(response => {
-                        this.memberId = response.data.memberId;
-                    })
-                    .catch(err => console.error(err));
-                axios.get('/api/Order/CategoriesWithSubs')
+                axios.get('/api/Menu/CategoriesWithSubs')
                     .then(response => this.categories = response.data)
                     .catch(err => {
                         console.error(err);
                         alert('無法獲取菜單類別，請稍後再試。');
                     });
-                axios.get('/api/Order/Products')
+
+                axios.get('/api/Menu/Products')
                     .then(response => this.products = response.data)
                     .catch(err => console.error(err));
-                axios.get('/api/Order/GetCartOrCreate')
+                
+                axios.post('/api/Menu/CreateCart')
                     .then(response => {
-                        this.cart = response.data.items;
-                        this.cartId = response.data.cartId;
-                        this.updateCartTotal();
+                        this.cartId = response.data;  // 將返回的購物車 ID 保存到數據中
                     })
                     .catch(error => {
-                        console.error('獲取或創建購物車失敗:', error);
+                        console.error('購物車建立失敗:', error);
                     });
             },
         });
