--- a/EnjoyEat/EnjoyEat/Views/Shared/_Layout.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/Shared/_Layout.cshtml
@@ -52,7 +52,14 @@
                     <li><a class="nav-link scrollto" asp-area="" asp-controller="Reservations" asp-action="Index">訂位</a></li>
                     <li><a class="nav-link scrollto" asp-area="OrderForHere" asp-controller="OrderLogin" asp-action="Index">內用點餐</a></li>
                     <li><a class="nav-link scrollto" asp-area="backend" asp-controller="EmployeeManagement" asp-action="Index">後臺管理</a></li>
-                    <li><a class="nav-link scrollto" asp-area="" asp-controller="OrderTogo" asp-action="Index">外帶點餐</a></li>
+                     @if (User.Identity.IsAuthenticated)
+                    {
+                        <li><a class="nav-link scrollto" asp-area="" asp-controller="OrderTogo" asp-action="Order">外帶點餐</a></li>
+                    }
+                    else
+                    {
+                        <li><a class="nav-link scrollto" asp-area="" asp-controller="OrderTogo" asp-action="Index">外帶點餐</a></li>
+                    }
                     <li><a class="nav-link scrollto" asp-controller="ContactUs" asp-action="ContactUs">聯絡我們</a></li>
                     @if (User.Identity.IsAuthenticated)
                     {
