--- a/EnjoyEat/EnjoyEat/Views/MemberLogin/ChangePd.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/MemberLogin/ChangePd.cshtml
@@ -1,28 +1,111 @@
-﻿<form action="forms/book-a-table.php" method="post" role="form" class="php-email-form" data-aos="fade-up" data-aos-delay="100">
+﻿@section Styles{
+    <link href="~/css/memberloginstyle.css" rel="stylesheet" />
+    <link href="~/lib/font-awesome/css/all.min.css" rel="stylesheet" />
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/vue2-datepicker@3.11.0/index.css" />
+}
+
+<!-- d-flex align-items-center -->
+<div id="change" class="php-email-form" data-aos="fade-up" data-aos-delay="100">
     <main id="main">
         <section class="breadcrumbs">
-            <div class="container">
-                <h1 style="color:burlywood;margin-top:30px">
-                    <div>
-                        <div class="flex-shrink-0" style="text-align:center">
-                            <p>修改密碼</p>
-                        </div>
-                        <img src="#" alt="" width="300">
-                    </div>
+            <div class="container" id="member">
+                <h1 id="Logo">
+                    修改密碼
+                    <i class="fa-sharp fa-solid fa-unlock-keyhole"></i>
+                </h1>
             </div>
-            </h1>
+            <div class="d-grid gap-2 col-6 mx-auto" id="memberRegistration">
+                <h4>
+                    <i class="fa-solid fa-lock"></i>
+                    <span>請輸入原本之密碼</span>
+                </h4>
+
+                <input type="password" class="left form-label col-md-11" v-model="originalPassword" placeholder="請輸入原密碼" maxlength="12" minlength="8" required>
+
+                <div id="PasswordHelpBlock" class="form-text">
+                    最小不能低於8碼,最大上限為12碼,不限英文與數字
+                </div>
+
+                <div id="AccountHelpBlock" class="form-text nono" v-if="passwordcheck">
+                    密碼錯誤，請再試一次
+                </div>
             </div>
-            <div class="d-grid gap-2 col-6 mx-auto">
-                <input type="text" aria-label="Account" class="form-control" placeholder="請輸入註冊帳號">
-                <input type="text" aria-label="Account" class="form-control" placeholder="請輸入註冊E-mail">
-                <input type="password" aria-label="Password" class="form-control" placeholder="請輸入新密碼">
-                <input type="password" aria-label="Password" class="form-control" placeholder="請再次輸入一次新密碼">
-            </div>
-            </div>
-            <br> <br>
-            <div class="d-grid gap-2 col-6 mx-auto">
-                <button class="btn btn-primary" type="">送出</button>
+
+            <div class="d-grid gap-2 col-6 mx-auto" id="memberRegistration">
+                <h4>
+                    <i class="fa-solid fa-lock"></i>
+                    <span>請輸入修改之密碼</span>
+                </h4>
+
+                <input type="password" class="left form-label col-md-11" v-model="newPassword" placeholder="請輸入新密碼" maxlength="12" minlength="8" required>
+
+                <div id="PasswordHelpBlock" class="form-text">
+                    最小不能低於8碼,最大上限為12碼,不限英文與數字
+                </div>
+                <div id="AccountHelpBlock" class="form-text nono" v-if="newcheck">
+                    輸入密碼長度不合，請再輸入一次
+                </div>
+                <div class="d-grid gap-2 col-md-9 mx-auto">
+                    <button class="btn btn-primary" type="button" @@click="submitInfo">送出</button>
+                </div>
             </div>
         </section>
     </main><!-- End #main -->
-</form>
+</div>
+
+@section Scripts{
+    <script src="https://cdn.jsdelivr.net/npm/vue2-datepicker@3.11.0/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.5/dist/sweetalert2.all.min.js"></script>
+    <script>
+        let app = new Vue({
+            el: '#change',
+            data: {
+                originalPassword: "",
+                newPassword: "",
+                passwordcheck: false,
+                newcheck:false,
+            },
+            methods: {
+                submitInfo: function () {
+                    let _this = this;
+                    _this.passwordcheck = false;
+                    _this.newcheck = false;
+                    if (_this.originalPassword.length < 8) {
+                        return _this.passwordcheck = true;
+                    }
+                    if (_this.newPassword.length < 8) {
+                        return _this.newcheck = true;
+                    }
+                    request = {
+                        OriginalPassword: _this.originalPassword,
+                        NewPassword: _this.newPassword,
+                    }
+                    axios.put("/api/member/ChangePassword", request).then(response => {
+                        if (response.data == "密碼錯誤") {
+                            return _this.passwordcheck = true;
+                        }
+                        else {
+                            Swal.fire({
+                                allowOutsideClick: false,
+                                icon: 'success',
+                                color: '#333',
+                                iconColor: '#D8CDB9',
+                                background: '#FFF',
+                                title: '密碼修改成功',
+                                html: '<div class="custom-swal-container"><div class="custom-swal-message">將跳轉至首頁!</div></div>',
+                                showConfirmButton: false,
+                                timer: 2000,
+                                position: 'center'
+                            }).then(result => {
+                                if (result.dismiss === Swal.DismissReason.timer) {
+                                    window.location.href = `/Home/Index`;
+                                }
+                            });
+                        }
+                    })
+                },
+            }
+        });
+    </script>
+}
