--- a/EnjoyEat/EnjoyEat/Views/Reservations/booking.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/Reservations/booking.cshtml
@@ -63,7 +63,9 @@
                                v-model="phone"
                                placeholder="您的手機號碼"
                                data-rule="minlen:4"
-                               data-msg="請輸入完整的手機號碼" />
+                               data-msg="請輸入完整的手機號碼"
+                               maxlength="10" 
+                               minlength="10" />
                         <div class="validate"></div>
                     </div>
                     <div class="form-group mt-2">
