--- a/EnjoyEat/EnjoyEat/wwwroot/css/Reservations.css
+++ b/EnjoyEat/EnjoyEat/wwwroot/css/Reservations.css
@@ -90,6 +90,18 @@ textarea {
 }
 
 /*datepicker*/
+.col-12 {
+    flex: 0 0 auto;
+    width: 100%;
+}
+
+.datepicker {
+    border: 0px;
+}
+
+div .mx-datepicker {
+    width: 100%
+}
 .datepicker {
     width: 100%;
     border: 0px;
